--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "python.pythonPath": "/bin/python3",
+    "python.pythonPath": "C:\\Users\\Tanvir\\AppData\\Local\\Programs\\Python\\Python39\\python.exe",
     "python.testing.pytestArgs": [
         "."
     ],
